tests/functionalTests/valid/code/doAction.hs
main :: IO ();
main = do {
    printHello;
    putStr "\n";
};

printHello :: IO ();
printHello = putStr "Hello";