tests/functionalTests/invalid/code/doTypedReturn.hs
main :: IO ();
main = do {
    putStr "Hello\n";
    return 5;
};